--- a/package.json
+++ b/package.json
@@ -9,17 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-slot": "^1.2.3",
     "@types/node": "24.3.1",
     "@types/react": "19.1.12",
     "@types/react-dom": "19.1.9",
     "autoprefixer": "10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "eslint": "9.35.0",
     "eslint-config-next": "15.5.2",
+    "lucide-react": "^0.542.0",
+    "mysql2": "^3.15.3",
     "next": "15.5.2",
+    "next-auth": "^4.24.11",
+    "openai": "^6.8.0",
     "postcss": "8.5.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "4.1.13",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.9.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13"
   }
 }
